Make Android Client UI more smoothly

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".ChatActivity"></activity>
         <activity android:name=".HelpPageActivity"></activity>
         <activity android:name=".MenuActivity"></activity>
-        <activity android:name=".RequestAuthoActivity"></activity>
+        <activity android:name=".RequestAuthActivity"></activity>
         <activity android:name=".PepperListActivity"></activity>
     </application>
 
