--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".MenuActivity"></activity>
         <activity android:name=".RequestAuthActivity"></activity>
         <activity android:name=".PepperListActivity"></activity>
+        <activity android:name=".GameActivity" android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
