--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".SignupActivity" />
         <activity android:name=".ChatActivity" />
-        <activity android:name=".HelpPageActivity" />
+        <activity android:name=".HelpPageActivity" >
+        </activity>
         <activity android:name=".MenuActivity" />
         <activity android:name=".RequestAuthActivity" />
         <activity android:name=".PepperListActivity" />
